[package]
name = "quicrepl"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.16.1", features = ["rt-multi-thread", "macros", "net", "fs", "sync", "time", "process"] }
clap = { version = "3.0.14", features = ["derive", "color", "env"] }
ctrlc = { version = "3.2.1", features = ["termination"] }
rustls = "0.20.2"
rustls-pemfile = "0.2.1"
futures-util = "0.3"
tracing = "0.1.30"
tracing-subscriber = "0.3.7"
dotenv = "0.15.0"
anyhow = "1.0"
bytes = "1.1.0"
quinn = "0.8.0"
rcgen = "0.9.0"
rustyline = "9.1.2"
